Added a Bipedal Robot lessons

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -161,7 +161,9 @@
     "\n",
     "_Ray RLlib_ is Ray's system for _reinforcement learning_. This tutorial begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
     "\n",
-    "Because of the breadth of RL this tutorial is divided into several segments. [00 Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) provides a suggested _learning plan_.\n",
+    "Because of the breadth of RL this tutorial is divided into several segments.\n",
+    "\n",
+    "> **Tip:** See [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) for a suggested _learning plan_.\n",
     "\n",
     "### Core Reinforcement Learning\n",
     "\n",
@@ -171,9 +173,10 @@
     "| 01 | [Introduction to Reinforcement Learning](ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](ray-rllib/02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03 | [Application - Cart Pole](ray-rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
-    "| 04 | [Custom Environments and Reward Shaping](ray-rllib/04-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
-    "| 05 | [Online Learning with DQN](ray-rllib/05-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
-    "| 06 | [RL References](ray-rllib/06-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "| 04 | [Application: Bipedal Walker](ray-rllib/04-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
+    "| 05 | [Custom Environments and Reward Shaping](ray-rllib/05-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
+    "| 06 | [Online Learning with DQN](ray-rllib/06-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
+    "| 07 | [RL References](ray-rllib/07-RL-References.ipynb) | References on reinforcement learning. |\n",
     "\n",
     "Some additional examples you might explore can be found in the `extras` folder:\n",
     "\n",
