--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -35,9 +35,10 @@
     "| 01 | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03 | [Application - Cart Pole](03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
-    "| 04 | [Custom Environments and Reward Shaping](04-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
-    "| 05 | [Online Learning with DQN](05-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
-    "| 06 | [RL References](06-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "| 04 | [Application: Bipedal Walker](04-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
+    "| 05 | [Custom Environments and Reward Shaping](05-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
+    "| 06 | [Online Learning with DQN](06-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
+    "| 07 | [RL References](07-RL-References.ipynb) | References on reinforcement learning. |\n",
     "\n",
     "Some additional examples you might explore can be found in the `extras` folder:\n",
     "\n",
@@ -104,10 +105,14 @@
     "\n",
     "* [Application: Cart Pole](03-Application-Cart-Pole.ipynb)\n",
     "\n",
+    "If you working through the lessons at your own pace (i.e., not in a class), work through the _Bipedal Walker_ example:\n",
+    "\n",
+    "* [Application: Bipedal Walker](04-Bipedal-Walker.ipynb)\n",
+    "\n",
     "Then finish the rest of the `ray-rllib` lessons:\n",
     "\n",
-    "* [Custom Environments and Reward Shaping](04-Custom-Environments-Reward-Shaping.ipynb)\n",
-    "* [Online Learning with DQN](05-Online-Learning-with-DQN.ipynb)\n",
+    "* [Custom Environments and Reward Shaping](05-Custom-Environments-Reward-Shaping.ipynb)\n",
+    "* [Online Learning with DQN](06-Online-Learning-with-DQN.ipynb)\n",
     "\n",
     "Other examples are provided for your use. See the `extras` directory for examples that work with other OpenAI Gym environments:\n",
     "\n",
