--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -182,7 +182,7 @@
     "- The **reward function** is a constant 1 as long as the pole is upright, and 0 once the pole has fallen over. Therefore, maximizing the reward means balancing the pole for as long as possible.\n",
     "- The **discount factor** in this case can be taken to be 1.\n",
     "\n",
-    "More information about the `gym` Python module is available at https://gym.openai.com/."
+    "More information about the `gym` Python module is available at https://gym.openai.com/. The list of all the available Gym environments is in [this wiki page](https://github.com/openai/gym/wiki/Table-of-environments). We'll even create our own in subsequent lessons."
    ]
   },
   {
