--- a/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
+++ b/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
@@ -278,9 +278,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rollout\n",
+    "\n",
     "Next we'll use the [`rollout` script](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies) to evaluate the trained policy.\n",
     "\n",
-    "This visualizes the \"character\" agent operating within the simulation: trying to find a walkable path to a goal tile."
+    "This visualizes the \"character\" agent operating within the simulation: trying to find a walkable path to a goal tile. See the [FrozenLake-v0 environment](https://gym.openai.com/envs/FrozenLake-v0/) documentation for an explanation of the textual grid printout."
    ]
   },
   {
@@ -10501,13 +10503,6 @@
     "\n",
     "In addition to _Taxi_ and _Frozen Lake_, there are other so-called [\"toy text\"](https://gym.openai.com/envs/#toy_text) problems you can try."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
