--- a/ray-rllib/extras/Extra-Application-Mountain-Car.ipynb
+++ b/ray-rllib/extras/Extra-Application-Mountain-Car.ipynb
@@ -525,6 +525,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rollout\n",
+    "\n",
     "Next we'll use the [`rollout` script](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies) to evaluate the trained policy.\n",
     "\n",
     "This visualizes the \"car\" agent operating within the simulation: rocking back and forth to gain momentum to overcome the mountain, using the last checkpoint. Edit the number in the checkpoint path if necessary! Also change the configuration to match the changes above.\n",
