--- a/ray-rllib/extras/Extra-Application-Taxi.ipynb
+++ b/ray-rllib/extras/Extra-Application-Taxi.ipynb
@@ -280,9 +280,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rollout\n",
+    "\n",
     "Next we'll use the [`rollout` script](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies) to evaluate the trained policy.\n",
     "\n",
-    "This visualizes the \"taxi\" agent operating within the simulation: picking up fares, driving, turning, doing dropoffs, etc."
+    "This visualizes the \"taxi\" agent operating within the simulation: picking up fares, driving, turning, doing dropoffs, etc. The 2-D map is visualized with text. The `:` are cells where the taxi can drive and the `|` are obstructions it has to avoid."
    ]
   },
   {
