--- a/ray-rllib/03-Application-Cart-Pole.ipynb
+++ b/ray-rllib/03-Application-Cart-Pole.ipynb
@@ -12,9 +12,11 @@
     "\n",
     "We were briefly introduced to the _CartPole_ example and the OpenAI gym `CartPole-v0` environment ([gym.openai.com/envs/CartPole-v0/](https://gym.openai.com/envs/CartPole-v0/)) in the [introduction](01-Introduction-to-Reinforcement-Learning.ipynb). This lesson uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy for _CartPole_.\n",
     "\n",
-    "Recall that the `gym` Python module provides MDP interfaces to a variety of simulators, like the simple simulator for the physics of balancing a pole on a cart that is used by the CartPole environment. The _CartPole_ problem is described at https://gym.openai.com/envs/CartPole-v0. Here is an image from that website:\n",
+    "Recall that the `gym` Python module provides MDP interfaces to a variety of simulators, like the simple simulator for the physics of balancing a pole on a cart that is used by the CartPole environment. The _CartPole_ problem is described at https://gym.openai.com/envs/CartPole-v0.\n",
     "\n",
     "![Cart Pole](../images/rllib/Cart-Pole.png)\n",
+    "\n",
+    "([source](https://gym.openai.com/envs/CartPole-v0/))\n",
     "\n",
     "Even though this is a relatively simple and quick example to run, its results can be understood quite visually. _CartPole_ is one of OpenAI Gym's [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples.\n",
     "\n",
@@ -215,7 +217,7 @@
     "config = ppo.DEFAULT_CONFIG.copy()              # PPO's default configuration. See the next code cell.\n",
     "config[\"log_level\"] = \"WARN\"                    # Suppress too many messages, but try \"INFO\" to see what can be printed.\n",
     "# Other settings we might adjust:\n",
-    "config['num_workers'] = 1                       # Use > 1 for cluster training\n",
+    "config['num_workers'] = 1                       # Use > 1 for using more CPU cores, including over a cluster\n",
     "config['num_sgd_iter'] = 10                     # Number of SGD (stochastic gradient descent) iterations per training minibatch.\n",
     "                                                # I.e., for each minibatch of data, do this many passes over it to train. \n",
     "config['sgd_minibatch_size'] = 250              # The amount of data records per minibatch\n",
@@ -1055,52 +1057,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we'll use the [`rollout` script](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies), using the `rllib rollout` command line, to evaluate the trained policy.\n",
+    "## Rollout\n",
+    "\n",
+    "Next we'll use the [RLlib rollout CLI](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies), to evaluate the trained policy.\n",
     "\n",
     "This visualizes the \"cartpole\" agent operating within the simulation: moving the cart left or right to avoid having the pole fall over.\n",
     "\n",
-    "We'll use the seventh saved checkpoint, `checkpoint_7` for the rollout, evaluated through `2000` steps.\n",
+    "We'll use the last saved checkpoint, `checkpoint_10` (or whatever you set for `N_ITER` above) for the rollout, evaluated through `2000` steps.\n",
     "\n",
-    "> **Note:** If you defined `checkpoint_root` above to be different than `tmp/ppo/cart`, then change it here, too. Note that bugs in variable substitution in Jupyter notebooks, we can't use variables in the next cell, unfortunately.\n",
-    "\n",
-    "Modify the path to view other checkpoints. Note that you have to change the number _twice_ in the path. You will have to change the checkpoint choice if you changed `N_ITER` above to a smaller number.\n",
-    "\n",
-    "> **Note:** If you changed the model parameters, specifically the `fcnet_hiddens` array in the `config` object above, make the same change here.\n",
+    "> **Notes:** \n",
+    ">\n",
+    "> 1. If you changed `checkpoint_root` above to be different than `tmp/ppo/cart`, then change it here, too. Note that bugs in variable substitution in Jupyter notebooks, we can't use variables in the next cell, unfortunately.\n",
+    "> 2. If you changed the model parameters, specifically the `fcnet_hiddens` array in the `config` object above, make the same change here.\n",
     "\n",
     "You may need to make one more modification, depending on how you are running this tutorial:\n",
     "\n",
     "1. Running on your laptop? - Remove the line `--no-render`. \n",
-    "2. Running on the Anyscale Service? The pop windows that would normally be created by the rollout can't be seen. Hence, the `--no-render` flag suppresses them. The following cell provides a sample video. "
+    "2. Running on the Anyscale Service? The popup windows that would normally be created by the rollout can't be viewed in this case. Hence, the `--no-render` flag suppresses them. The code cell afterwords provides a sample video. You can try adding `--video-dir tmp/ppo/cart`, which will generate MP4 videos, then download them to view them. Or copy the `Video` cell below and use it to view the movies.\n",
+    "\n",
+    "> **Troubleshooting:** If you get an error like the following:\n",
+    "> `ERROR: Multiple instances of Ray are running:\n",
+    "ERROR:   $@"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-06-13 11:50:52,188\tWARNING worker.py:809 -- When connecting to an existing cluster, _internal_config must match the cluster's _internal_config.\n",
-      "2020-06-13 11:50:52,216\tINFO trainer.py:421 -- Tip: set 'eager': true or the --eager flag to enable TensorFlow eager execution\n",
-      "2020-06-13 11:50:52,234\tINFO trainer.py:580 -- Current log_level is WARN. For more information, set 'log_level': 'INFO' / 'DEBUG' or use the -v and -vv flags.\n",
-      "2020-06-13 11:50:54,380\tINFO trainable.py:217 -- Getting current IP.\n",
-      "2020-06-13 11:50:54,380\tWARNING util.py:37 -- Install gputil for GPU system monitoring.\n",
-      "2020-06-13 11:50:54,438\tINFO trainable.py:217 -- Getting current IP.\n",
-      "2020-06-13 11:50:54,438\tINFO trainable.py:423 -- Restored on 192.168.1.149 from checkpoint: tmp/ppo/cart/checkpoint_7/checkpoint-7\n",
-      "2020-06-13 11:50:54,438\tINFO trainable.py:430 -- Current state after restoring: {'_iteration': 7, '_timesteps_total': 28000, '_time_total': 27.542689323425293, '_episodes_total': 508}\n",
+      "2020-06-14 07:28:52,863\tWARNING worker.py:809 -- When connecting to an existing cluster, _internal_config must match the cluster's _internal_config.\n",
+      "2020-06-14 07:28:52,886\tINFO trainer.py:421 -- Tip: set 'eager': true or the --eager flag to enable TensorFlow eager execution\n",
+      "2020-06-14 07:28:52,904\tINFO trainer.py:580 -- Current log_level is WARN. For more information, set 'log_level': 'INFO' / 'DEBUG' or use the -v and -vv flags.\n",
+      "2020-06-14 07:28:55,255\tINFO trainable.py:217 -- Getting current IP.\n",
+      "2020-06-14 07:28:55,255\tWARNING util.py:37 -- Install gputil for GPU system monitoring.\n",
+      "2020-06-14 07:28:55,350\tINFO trainable.py:217 -- Getting current IP.\n",
+      "2020-06-14 07:28:55,350\tINFO trainable.py:423 -- Restored on 192.168.1.149 from checkpoint: tmp/ppo/cart/checkpoint_7/checkpoint-7\n",
+      "2020-06-14 07:28:55,350\tINFO trainable.py:430 -- Current state after restoring: {'_iteration': 7, '_timesteps_total': 28000, '_time_total': 27.542689323425293, '_episodes_total': 508}\n",
       "Episode #0: reward: 200.0\n",
       "Episode #1: reward: 200.0\n",
-      "Episode #2: reward: 200.0\n",
-      "Episode #3: reward: 130.0\n",
-      "Episode #4: reward: 143.0\n",
-      "Episode #5: reward: 132.0\n",
+      "Episode #2: reward: 117.0\n",
+      "Episode #3: reward: 200.0\n",
+      "Episode #4: reward: 183.0\n",
+      "Episode #5: reward: 200.0\n",
       "Episode #6: reward: 200.0\n",
-      "Episode #7: reward: 200.0\n",
+      "Episode #7: reward: 182.0\n",
       "Episode #8: reward: 200.0\n",
       "Episode #9: reward: 200.0\n",
-      "Episode #10: reward: 195.0\n"
+      "Episode #10: reward: 118.0\n"
      ]
     }
    ],
@@ -1167,7 +1174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more examples of working with Gym environments, go through any of the \"extra\" lessons:\n",
+    "For more examples of working with Gym environments, go through the next lesson, [Bipedal Walker](04-Bipedal-Walker.ipynb), then any of the \"extra\" lessons:\n",
     "\n",
     "* [Extras: Application - Mountain Car](extras/Extra-Application-Mountain-Car.ipynb) -- Based on the `MountainCar-v0` environment from OpenAI Gym.\n",
     "* [Extras: Application - Taxi](extras/Extra-Application-Taxi.ipynb) -- Based on the `Taxi-v3` environment from OpenAI Gym.\n",
@@ -1182,15 +1189,8 @@
    "source": [
     "## Exercise (\"Homework\")\n",
     "\n",
-    "In addition to _Cart Pole_, as well as the _Mountain Car_ example explored in [Extras: Application: Mountain Car](extras/Extra-Application-Mountain-Car.ipynb), there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try."
+    "In addition to _Cart Pole_, _Bipedal Walker_, and _Mountain Car_, there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try. Make a copy of this notebook and edit as required."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
