--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -54,13 +54,13 @@
     "\n",
     "### Multi-Armed Bandits\n",
     "\n",
-    "_Multi-Armed Bandits_ (MABs) are a special kind of RL problem that have broad and growing applications. The term is inspired by the slot machines in casinos, so called _one-armed bandits_, but where a machine might have more than one arm. \n",
+    "_Multi-Armed Bandits_ (MABs) are a special kind of RL problem that have broad and growing applications. They are also an excellent platform for investigating the important _exploitation vs. exploration tradeoff_ at the heart of RL. The term _multi-armed bandit_ is inspired by the slot machines in casinos, so called _one-armed bandits_, but where a machine might have more than one arm. \n",
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
     "| 00 | [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb) | Overview of this set of lessons. |\n",
     "| 01 | [Introduction to Multi-Armed Bandits](multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
-    "| 02 | [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.iypnb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
+    "| 02 | [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.ipynb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
     "| 03 | [Simple Multi-Armed Bandit](multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
     "| 04 | [Linear Upper Confidence Bound](multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb) | One popular algorithm for exploration vs. exploitation is _Upper Confidence Bound_. This lesson shows how to use a linear version in RLlib. |\n",
     "| 05 | [Linear Thompson Sampling](multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb) | Another popular algorithm for exploration vs. exploitation is _Thompson Sampling_. This lesson shows how to use a linear version in RLlib. |\n",
@@ -83,11 +83,11 @@
     "* [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) \n",
     "* [Introduction to RLlib](02-Introduction-to-RLlib.ipynb)\n",
     "\n",
-    "Then study several of the lessons for MABs, starting with these lessons:\n",
+    "Then study several of the lessons for multi-armed bandits, starting with these lessons:\n",
     "\n",
     "* [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb)\n",
     "* [Introduction to Multi-Armed Bandits](multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb)\n",
-    "* [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.iypnb): Skim at least the first part of this lesson. \n",
+    "* [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.ipynb): Skim at least the first part of this lesson. \n",
     "* [Simple Multi-Armed Bandit](multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb)\n",
     "\n",
     "As time permits, study one or both of the following lessons:\n",
