fix typos, broken links

--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "For more detailed information about RLlib and its open source community, see the following:\n",
     "\n",
-    "* [rllib.io](http::/rllib.io) (the documentation)\n",
+    "* [rllib.io](http://rllib.io) (the documentation)\n",
     "* [GitHub repo](https://github.com/ray-project/ray/tree/master/rllib#rllib-scalable-reinforcement-learning)"
    ]
   },
@@ -5451,7 +5451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once trained, you can use `ray rollout <checkpoint> --run PPO` to reply a session using the trained model in `<checkpoint>`, which in this case will be a directory with a name like this:\n",
+    "Once trained, you can use `rllib rollout <checkpoint> --run PPO` to reply a session using the trained model in `<checkpoint>`, which in this case will be a directory with a name like this:\n",
     "\n",
     "```\n",
     "$HOME/ray_results/default/PPO_CartPole-v0_0_YYYY-MM-DD_HH-MM-SS.../checkpoint_20/checkpoint-20/\n",
@@ -5669,7 +5669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
