--- a/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
+++ b/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's one possible set. It takes longer for teh max reward to reach 200, so I increased the number of episodes `N` to 10."
+    "Here's one possible set. It takes longer for the max reward to reach 200, so I increased the number of episodes `N` to 10."
    ]
   },
   {
@@ -966,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
