better explanations for the rollout text in Extras

--- a/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
+++ b/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
@@ -282,7 +282,31 @@
     "\n",
     "Next we'll use the [`rollout` script](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies) to evaluate the trained policy.\n",
     "\n",
-    "This visualizes the \"character\" agent operating within the simulation: trying to find a walkable path to a goal tile. See the [FrozenLake-v0 environment](https://gym.openai.com/envs/FrozenLake-v0/) documentation for an explanation of the textual grid printout."
+    "The following rollout visualizes the \"character\" agent operating within its simulation: trying to find a walkable path to a goal tile. \n",
+    "\n",
+    "The [FrozenLake-v0 environment](https://gym.openai.com/envs/FrozenLake-v0/) documentation provides a detailed explanation of the text encoding. The *observation space* is defined as a 4x4 grid:\n",
+    "\n",
+    "  * `S` -- starting point, safe\n",
+    "  * `F` -- frozen surface, safe\n",
+    "  * `H` -- hole, fall to your doom\n",
+    "  * `G` -- goal, where the frisbee is located\n",
+    "  * orange rectangle shows where the character/agent is currently located\n",
+    "  \n",
+    "Note that for each action, the grid gets printed first followed by the action.\n",
+    "\n",
+    "The *action space* is defined by four possible movements across the grid on the frozen lake:\n",
+    "\n",
+    "  * Up\n",
+    "  * Down\n",
+    "  * Left\n",
+    "  * Right\n",
+    "\n",
+    "The *rewards* at the end of each episode are structured as:\n",
+    "\n",
+    "  * 1 if you reach the goal\n",
+    "  * 0 otherwise\n",
+    "\n",
+    "An episode ends when you reach the goal or fall in a hole."
    ]
   },
   {
@@ -10480,7 +10504,8 @@
    "source": [
     "!RAY_ADDRESS=auto rllib rollout \\\n",
     "    tmp/ppo/frozen-lake/checkpoint_10/checkpoint-10 \\\n",
-    "    --config \"{\\\"env\\\": \\\"FrozenLake-v0\\\"}\" --run PPO \\\n",
+    "    --config \"{\\\"env\\\": \\\"FrozenLake-v0\\\"}\" \\\n",
+    "    --run PPO \\\n",
     "    --steps 2000"
    ]
   },
@@ -10526,7 +10551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
