--- a/ray-rllib/extras/Extra-Application-Taxi.ipynb
+++ b/ray-rllib/extras/Extra-Application-Taxi.ipynb
@@ -284,7 +284,37 @@
     "\n",
     "Next we'll use the [`rollout` script](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies) to evaluate the trained policy.\n",
     "\n",
-    "This visualizes the \"taxi\" agent operating within the simulation: picking up fares, driving, turning, doing dropoffs, etc. The 2-D map is visualized with text. The `:` are cells where the taxi can drive and the `|` are obstructions it has to avoid."
+    "The output from the following command visualizes the \"taxi\" agent operating within its simulation: picking up a passenger, driving, turning, dropping off a passenger (\"put-down\"), and so on. \n",
+    "\n",
+    "A 2-D map of the *observation space* is visualized as text, which needs some decoding instructions:\n",
+    "\n",
+    "  * `R` -- R(ed) location in the Northwest corner\n",
+    "  * `G` -- G(reen) location in the Northeast corner\n",
+    "  * `Y` -- Y(ellow) location in the Southwest corner\n",
+    "  * `B` -- B(lue) location in the Southeast corner\n",
+    "  * `:` -- cells where the taxi can drive\n",
+    "  * `|` -- obstructions (\"walls\") which the taxi must avoid\n",
+    "  * blue letter represents the current passenger’s location for pick-up\n",
+    "  * purple letter represents the drop-off location\n",
+    "  * yellow rectangle is the current location of our taxi/agent\n",
+    "\n",
+    "That allows for a total of 500 states, and these known states are numbered between 0 and 499.\n",
+    "\n",
+    "The *action space* for the taxi/agent is defined as:\n",
+    "\n",
+    "  * move the taxi one square North\n",
+    "  * move the taxi one square South\n",
+    "  * move the taxi one square East\n",
+    "  * move the taxi one square West\n",
+    "  * pick-up the passenger\n",
+    "  * put-down the passenger\n",
+    "\n",
+    "The *rewards* are structured as −1 for each action plus:\n",
+    "\n",
+    " * +20 points when the taxi performs a correct drop-off for the passenger\n",
+    " * -10 points when the taxi attempts illegal pick-up/drop-off actions\n",
+    "\n",
+    "Admittedly it'd be better if these state visualizations showed the *reward* along with observations."
    ]
   },
   {
@@ -16330,7 +16360,8 @@
    "source": [
     "!RAY_ADDRESS=auto rllib rollout \\\n",
     "    tmp/ppo/taxi/checkpoint_10/checkpoint-10 \\\n",
-    "    --config \"{\\\"env\\\": \\\"Taxi-v3\\\"}\" --run PPO \\\n",
+    "    --config \"{\\\"env\\\": \\\"Taxi-v3\\\"}\" \\\n",
+    "    --run PPO \\\n",
     "    --steps 2000"
    ]
   },
@@ -16342,13 +16373,6 @@
     "\n",
     "In addition to _Taxi_, there are other so-called [\"toy text\"](https://gym.openai.com/envs/#toy_text) problems you can try."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -16372,7 +16396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
