--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -933,15 +933,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll continue exploring usage of _LinUCB_ in the next lesson, [04 Linear Upper Confidence Bound](04-Linear-Upper-Confidence-Bound.ipynb.ipynb) and _LinTS_ in the following lesson, [05 Thompson Sampling](05-Thompson-Sampling.ipynb)."
+    "We'll continue exploring usage of _LinUCB_ in the next lesson, [04 Linear Upper Confidence Bound](04-Linear-Upper-Confidence-Bound.ipynb) and _LinTS_ in the following lesson, [05 Thompson Sampling](05-Linear-Thompson-Sampling.ipynb)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -960,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
