--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -169,7 +169,7 @@
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.iypnb) | Overview of this tutorial. |\n",
+    "| 00 | [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01 | [Introduction to Reinforcement Learning](ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](ray-rllib/02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03 | [Application - Cart Pole](ray-rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
@@ -196,7 +196,7 @@
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Multi-Armed-Bandits Overview](ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb) | Overview of this set of lessons. |\n",
+    "| 00 | [Multi-Armed-Bandits Overview](ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb) | Overview of this set of lessons. |\n",
     "| 01 | [Introduction to Multi-Armed Bandits](ray-rllib/multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
     "| 02 | [Exploration vs. Exploitation Strategies](ray-rllib/multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.ipynb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
     "| 03 | [Simple Multi-Armed Bandit](ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
