--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Ray RLlib Overview](00-Ray-RLlib-Overview.iypnb) | Overview of this tutorial. |\n",
+    "| 00 | [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01 | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03 | [Application - Cart Pole](03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
@@ -58,7 +58,7 @@
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb) | Overview of this set of lessons. |\n",
+    "| 00 | [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb) | Overview of this set of lessons. |\n",
     "| 01 | [Introduction to Multi-Armed Bandits](multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
     "| 02 | [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.ipynb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
     "| 03 | [Simple Multi-Armed Bandit](multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
@@ -79,13 +79,13 @@
     "\n",
     "Start with the overview material for RL and RLlib:\n",
     "\n",
-    "* [Ray RLlib Overview](00-Ray-RLlib-Overview.iypnb)\n",
+    "* [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb)\n",
     "* [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) \n",
     "* [Introduction to RLlib](02-Introduction-to-RLlib.ipynb)\n",
     "\n",
     "Then study several of the lessons for multi-armed bandits, starting with these lessons:\n",
     "\n",
-    "* [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.iypnb)\n",
+    "* [Multi-Armed-Bandits Overview](multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb)\n",
     "* [Introduction to Multi-Armed Bandits](multi-armed-bandits/01-Introduction-to-Multi-Armed-Bandits.ipynb)\n",
     "* [Exploration vs. Exploitation Strategies](multi-armed-bandits/02-Exploration-vs-Exploitation-Strategies.ipynb): Skim at least the first part of this lesson. \n",
     "* [Simple Multi-Armed Bandit](multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb)\n",
