--- a/ray-tune/00-Ray-Tune-Overview.ipynb
+++ b/ray-tune/00-Ray-Tune-Overview.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "|     | Lesson | Description |\n",
     "| :-- | :----- | :---------- |\n",
-    "| 00  | [Ray Tune Overview](00-Ray-Tune-Overview.iypnb) | Overview of this tutorial. |\n",
+    "| 00  | [Ray Tune Overview](00-Ray-Tune-Overview.ipynb) | Overview of this tutorial. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-Tune-Solutions.ipynb).\n",
     "\n",
