Fixed ray.init() calls without proper address arguments

--- a/advanced-ray/03-Ray-Internals.ipynb
+++ b/advanced-ray/03-Ray-Internals.ipynb
@@ -445,7 +445,7 @@
    "source": [
     "import ray\n",
     "\n",
-    "ray.init(address='auto')"
+    "ray.init(address='auto', ignore_reinit_error=True)"
    ]
   },
   {
