--- a/ray-crash-course/07-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/07-Running-Ray-Clusters.ipynb
@@ -4075,7 +4075,7 @@
     "\n",
     "```python\n",
     "import ray\n",
-    "ray.init(address='auto', redis_password='5241590000000000')\n",
+    "ray.init(address='auto', ignore_reinit_errors=True, redis_password='5241590000000000')\n",
     "```\n",
     "\n",
     "The `redis_password` shown is the default value. We didn't specify this argument when we called `ray.init()` in other notebooks."
