--- a/ray-rllib/05-Custom-Environments-Reward-Shaping.ipynb
+++ b/ray-rllib/05-Custom-Environments-Reward-Shaping.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "ray.init(address='auto', ignore_reinit_error=True)"
    ]
   },
   {
