--- a/ray-rllib/04-Bipedal-Walker.ipynb
+++ b/ray-rllib/04-Bipedal-Walker.ipynb
@@ -153,7 +153,7 @@
     }
    ],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "ray.init(address='auto', ignore_reinit_error=True)"
    ]
   },
   {
