--- a/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
+++ b/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "ray.init(address='auto', ignore_reinit_error=True)"
    ]
   },
   {
